--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
           </ul>
           <ul class="portfolio-bloks list">
             <li class="portfolio-bloks-item">
-              <div>
-                <a class="portf-list link" href="">
+              <a class="portf-list link" href="">
+                <div overlay-box>
                   <img
                     class="portfolio-photo"
                     src="./images/portfolio/portfo-1.jpg"
@@ -85,20 +85,17 @@
                     width="360"
                     height="300"
                   />
-
-                  <div class="portfolio-bloks-name">
-                    <h2 class="second-title">Banking App Interface Concept</h2>
-                    <p class="li-text">App</p>
-                  </div>
-                </a>
-              </div>
-              <div class="overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-bloks-name">
+                  <h2 class="second-title">Banking App Interface Concept</h2>
+                  <p class="li-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-bloks-item">
               <a class="portf-list link" href=""
