--- a/portfolio.html
+++ b/portfolio.html
@@ -79,21 +79,24 @@
               <a class="portf-list link" href="">
                 <div overlay-box>
                   <img
+                    class="overlay-img"
                     class="portfolio-photo"
                     src="./images/portfolio/portfo-1.jpg"
                     alt="application"
                     width="360"
                     height="300"
                   />
+                  <div class="portfolio-bloks-name">
+                    <h2 class="second-title">Banking App Interface Concept</h2>
+                    <p class="li-text">App</p>
+                  </div>
+                </div>
+                <div>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
-                </div>
-                <div class="portfolio-bloks-name">
-                  <h2 class="second-title">Banking App Interface Concept</h2>
-                  <p class="li-text">App</p>
                 </div>
               </a>
             </li>
