poprawka podwijnogo clasu

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,9 +77,8 @@
           <ul class="portfolio-bloks list">
             <li class="portfolio-bloks-item">
               <a class="portf-list link" href="">
-                <div overlay-box>
+                <div class="overlay-box">
                   <img
-                    class="overlay-img"
                     class="portfolio-photo"
                     src="./images/portfolio/portfo-1.jpg"
                     alt="application"
