--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,7 @@
               <button class="portfolio-button" type="button">Marketing</button>
             </li>
           </ul>
+          <!-- dodatky -->
           <ul class="portfolio-bloks list">
             <li class="portfolio-bloks-item">
               <a class="portf-list link" href="">
@@ -85,28 +86,33 @@
                     width="360"
                     height="300"
                   />
-                  <div class="portfolio-bloks-name">
-                    <h2 class="second-title">Banking App Interface Concept</h2>
-                    <p class="li-text">App</p>
-                  </div>
-                </div>
-                <div>
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
+                <div class="portfolio-bloks-name">
+                  <h2 class="second-title">Banking App Interface Concept</h2>
+                  <p class="li-text">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-2.jpg"
-                  alt="QR code on telephone"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-2.jpg"
+                    alt="QR code on telephone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Cashless Payment</h2>
                   <p class="li-text">Marketing</p>
@@ -114,13 +120,20 @@
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-3.jpg"
-                  alt="laptop"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-3.jpg"
+                    alt="laptop"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Meditation App</h2>
                   <p class="li-text">App</p>
@@ -128,13 +141,20 @@
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-4.jpg"
-                  alt="phone in the car"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-4.jpg"
+                    alt="phone in the car"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Taxi Service</h2>
                   <p class="li-text">Marketing</p>
@@ -143,12 +163,19 @@
             </li>
             <li class="portfolio-bloks-item">
               <a class="portf-list link" href="">
-                <img
-                  src="./images/portfolio/portfo-5.jpg"
-                  alt="phone and moon"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-5.jpg"
+                    alt="phone and moon"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Screen Illustrations</h2>
                   <p class="li-text">Design</p>
@@ -156,13 +183,20 @@
               >
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-6.jpg"
-                  alt="girl with phone"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-6.jpg"
+                    alt="girl with phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Online Courses</h2>
                   <p class="li-text">Marketing</p>
@@ -170,13 +204,20 @@
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-7.jpg"
-                  alt="Instagram Stories"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-7.jpg"
+                    alt="Instagram Stories"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Instagram Stories Concept</h2>
                   <p class="li-text">Design</p>
@@ -184,13 +225,20 @@
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-8.jpg"
-                  alt="woman with vegetables"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-8.jpg"
+                    alt="woman with vegetables"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Organic Food</h2>
                   <p class="li-text">Web Site</p>
@@ -198,13 +246,20 @@
               </a>
             </li>
             <li class="portfolio-bloks-item">
-              <a class="portf-list link" href=""
-                ><img
-                  src="./images/portfolio/portfo-9.jpg"
-                  alt="fancy coffee"
-                  width="360"
-                  height="300"
-                />
+              <a class="portf-list link" href="">
+                <div class="overlay-box">
+                  <img
+                    src="./images/portfolio/portfo-9.jpg"
+                    alt="fancy coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-bloks-name">
                   <h2 class="second-title">Fresh Coffee</h2>
                   <p class="li-text">Web Site</p>
